[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "boundary_issues"
description = "AI@MBL 3D instance segmentation"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
]
keywords = []
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "yuening.liu@czbiohub.org ", name = "yuening_liu" },
    { email = "dominikrobak7@gmail.com ", name = "Dominik Robak" },
    { email = "emk2237@columbia.edu ", name = "erika_kusaka"  },
    { email = "madison.chlebowski@yahoo.com", name = "Madison_Chlebowski" },
    { email = "tbasiashvili@ucsd.edu ", name = "tamar_basiashvili" },

]
dynamic = ["version"]
dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "imageio",
    "matplotlib",
    "zarr",
    "ome-zarr",                       
    "jupyter",
    "ipykernel",
    "jupytext",
    "tensorboard",
    "torchview",
    "black",
    "pytest",
    "torch",                          
    "torchvision",                    
    "bootstrapper @ git+https://github.com/ucsdmanorlab/bootstrapper.git",
]
